--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,30 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+ body {
+    background-color: #0D0D0D; 
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+ }
+
+ ul {
+  list-style: none;
+ }
+
+ .custom-scrollbar::-webkit-scrollbar {
+  height: 10px;
+ } 
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: "#282828";
+  border-radius: 10px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #d4af37;
+  border-radius: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.custom-scrollbar::-webkit-scrollbar-thum:hover {
+  background-color: #f0c950;
 }
